@@ -30,13 +30,35 @@ CDVDVideoCodec* CDVDFactoryCodec::CreateVideoCodec(CodecID codecID)
 CDVDAudioCodec* CDVDFactoryCodec::CreateAudioCodec(CodecID codecID)
 {
   CDVDAudioCodec* pAudioCodec = NULL;
-  if (codecID == CODEC_ID_AC3)
+
+  switch (codecID)
   {
-    pAudioCodec = new CDVDAudioCodecLiba52();
-  }
-  else
-  {
-    pAudioCodec = new CDVDAudioCodecFFmpeg();
+  case CODEC_ID_AC3:
+    {
+      pAudioCodec = new CDVDAudioCodecLiba52();
+      break;
+    }
+    //case CODEC_ID_AAC:
+  case CODEC_ID_MP2:
+  case CODEC_ID_PCM_S16BE:
+  case CODEC_ID_PCM_S16LE:
+  case CODEC_ID_MP3:
+    {
+      pAudioCodec = new CDVDAudioCodecFFmpeg();
+      break;
+    }
+  case CODEC_ID_DTS:
+    {
+      // dts stream
+      // asyncaudiostream is unable to open dts streams, use ac97 for this
+      CLog::Log(LOGWARNING, "CODEC_ID_DTS is currently not supported");
+      break;
+    }
+  default:
+    {
+      CLog::Log(LOGWARNING, "Unsupported audio codec");
+      break;
+    }
   }
 
   return pAudioCodec;
